--- a/Projetos/THE landpage/README
+++ b/Projetos/THE landpage/README
@@ -14,3 +14,13 @@ uma das últimas coisas a serem feitas nesse projeto.
     Não é uma promessa, mas uma pequena nota de que pode, no final do projeto, 
 haver homepages diferentes dependendo de qual tema você escolhe para logar 
 com o login e senha predefinidos.
+
+Notas de aprimoramento: 
+    substituir as múltiplas páginas estáticas por uma única dinâmica, 
+que alteraria a estrutura de HTML à medida da interação do usuário com a página,
+nesse âmbito, seria necessário o uso de Javascript para a manipulação do DOM. 
+    Para essa execução, haveria ainda que o desenvolvedor, no caso, este que vos fala,
+aprimorar seus conhecimentos em Javascript, principalmente em manipulação do DOM.
+    Para um futuro ainda um pouco distante, seria necessário o uso de um banco de dados
+para armazenar os dados de login e senha, o que seria um desafio a mais para o 
+desenvolvedor, que teria que ter a expertise ainda inexistente nessa área.
